# ocean

./: CMakeLists.txt
lib/glad/include/glad/: gl.h
src/: main.cpp
